@@ -42,6 +42,7 @@ Usage   : ACHIEVEMENTS (PLAYER/ACCOUNT/CLAN) (ALL/NOW/ANNOUNCE) ([PLAYER])\n\r\
 Usage   : ACHIEVEMENTS (AWARDS/REMORT/FUTURE/RETIRE) ([PLAYERNAME])\n\r\
 Example : achievements\n\r\
 Example : achievements all\n\r\
+Example : achievements all awards\n\r\
 Example : achievements bob\n\r\
 Example : achievements player now\n\r\
 Example : achievements account announce bob\n\r\
